preferred and managed aggregation
